--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,15 @@
   --foreground: #171717;
 }
 
+@font-face {
+  font-family: "AkiraExpanded";
+  src: url("/fonts/AkiraExpanded.otf")  format('truetype');;
+}
+@font-face {
+  font-family: "Degular";
+  src: url("/fonts/DegularDisplay-Regular.otf");
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
