--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,3 +33,9 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.text-outline-transparent {
+  color: transparent;
+  -webkit-text-stroke: 1px black;
+  text-stroke: 1px black;
+}
